still need to fix white space overflow for y

--- a/portfolio-mcw/src/App.css
+++ b/portfolio-mcw/src/App.css
@@ -4,6 +4,9 @@ body {
   height: auto;
   padding: 0;
   margin: 0;
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 #sky {
